# 33_ConwaysGameOfLife

./: LICENSE  README.md  config.py  main.py  pyproject.toml  sim.py
